--- a/BancoInvest.MVC/Views/Home/Index.cshtml
+++ b/BancoInvest.MVC/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo ao Banco Invest</h1>
+    <br />
+    <br />
+    <p>Saldo atual: R$ 0,00</p>
+    <p>Conta criada em @DateTime.Today.ToShortDateString()</p>
 </div>
