--- a/BancoInvest.MVC/Views/Login/Index.cshtml
+++ b/BancoInvest.MVC/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model LoginViewModel
+@{
     Layout = null;
 }
 
@@ -20,18 +21,29 @@
 </head>
 <body>
     <div class="container">
+        <form asp-controller="Login" asp-action="Index" method="post">
         <div class="row g-0" style="margin-top:100px">
             <div class="col-md-4 mx-auto bg-white bg-opacity-75 p-4 mt-5 align-content-center">
                 <h1 class="text-center"><b>Banco Invest</b></h1>
                 <h3 class="text-center">Seu banco simplificado</h3>
                 <hr />
                 <div class="form-floating text-end">
-                    <input type="text" id="usuario" class="form-control" />
-                    <input type="text" id="senha" class="form-control">
+                    <div class="form-floating mb-3 mt-3">
+                        <input asp-for="Login" class="form-control" autocomplete="username" aria-required="true"/>
+                        <label asp-for="Login" class="form-label"></label>
+                        <span asp-validation-for="Login" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3 mt-3">
+                        <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" />
+                        <label asp-for="Password" class="form-label"></label>
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    
                     <button type="submit" value="Login" class="btn btn-primary">Login</button>
                 </div>
             </div>
         </div>
+        </form>
     </div>
 </body>
 </html>
