--- a/BancoInvest.MVC/Views/_ViewImports.cshtml
+++ b/BancoInvest.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BancoInvest.MVC
 @using BancoInvest.MVC.Models
+@using BancoInvest.Application.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
