--- a/BancoInvest.MVC/Views/Shared/_Layout.cshtml
+++ b/BancoInvest.MVC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Index">Clientes</a>
                         </li>
                     </ul>
+                    <partial name="_LayoutPartial" />
                 </div>
             </div>
         </nav>
